# WeatherForecast

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config-example.json
lib/: CMakeLists.txt
lib/app/: CMakeLists.txt  app.cpp  app.h
lib/configuration/: CMakeLists.txt  city.cpp  city.h  configuration.cpp  configuration.h  configuration_factory.cpp  configuration_factory.h
lib/file/: CMakeLists.txt  file_reader.cpp  file_reader.h
lib/httpclient/: CMakeLists.txt  client.cpp  client.h  request.cpp
lib/parser/: CMakeLists.txt  converter.cpp  converter.h  file_reader.cpp  file_reader.h  json_value.h  parser.cpp  parser.h
lib/requests/: CMakeLists.txt  request.cpp  request.h
lib/ui/: CMakeLists.txt  ui.cpp  ui.h
lib/weather/: CMakeLists.txt  forecast.h  forecast_factory.cpp  forecast_factory.h  weather_day.cpp  weather_day.h  weather_parser.cpp  weather_parser.h  weather_period.cpp  weather_period.h
